--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<!doctype html><head><title>demo</title><meta charset="utf-8"><link rel="stylesheet" href="styles.css"></head><body><script src="index.js"></script></body></html>
+<!doctype html><head><title>pointing at the moon</title><meta charset="utf-8"><link rel="stylesheet" href="styles.css"></head><body><script src="index.js"></script></body></html>
